2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/agents_modules.php: changed the header of the table
	agents modules, now it uses css3 (and some tricks in javascript)
	and the text for the modules is vertical.
	
	Fixes: #3539424
	
	MERGED FROM THE TRUNK

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/operation/tactical.php,
	mobile/operation/home.php, mobile/operation/alerts.php,
	mobile/operation/agent.php, mobile/operation/events.php,
	mobile/operation/module_graph.php, mobile/operation/modules.php,
	mobile/operation/groups.php, mobile/include/style/main.css: some
	fixes.
	
	* include/functions_reporting.php: some fixes in the images that
	they aren't.
	
	* operation/agentes/alerts_status.php, operation/events/events.php:
	cleaned source code style.

2013-04-22 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php, include/functions_alerts.php,
	include/functions_tags.php, include/functions_html.php,
	include/functions_events.php, include/functions_users.php,
	include/functions_groups.php, include/functions_graph.php,
	include/functions_reporting.php: added functions from Pandora 5 for
	to use in new Pandora Mobile.
	
	* include/constants.php: : added contants from Pandora 5 for to use
	in new Pandora Mobile.
	
	* operation/agentes/status_monitor.php,
	operation/agentes/estado_agente.php: cleaned source code style.
	
	* mobile/*: adapted the Pandora Mobile code from Pandora 5 and
	erased the old Pandora Mobile.

2013-04-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_visuals.php, general/header.php: removed the
	feature to set autorefresh for all pages.
	
	Fixes: #3609234

2013-04-12 Sancho Lerena <slerena@artica.es>

	* * extensions/net_tools.php
	extensions/ssh_gateway.php
	extensions/vnc_view.php: Not shown if agent doesnt have IP. Added
	support to SSH extension to use custom ports.

2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
	