@@ -840,7 +840,9 @@ CREATE TABLE tusuario (
 	timezone VARCHAR2(50) default '',
 	block_size NUMBER(10, 0) default 20 NOT NULL,
 	flash_chart NUMBER(10, 0) default 1 NOT NULL,
-	id_skin NUMBER(10, 0) DEFAULT 0 NOT NULL
+	id_skin NUMBER(10, 0) DEFAULT 0 NOT NULL,
+	section VARCHAR2(255) NOT NULL,
+	data_section VARCHAR2(255) NOT NULL
 );
 
 CREATE TABLE tusuario_perfil (
